added html side header content

--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Street Food</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>🌯Street Food🌯</title>
 </head>
 <body>
+    <div class="header">
+        <nav>
+            <ul class="nav-links">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Our Menu</a>
+                </li>
+                <li>
+                    <a href="#">Happy Hour</a>
+                </li>
+                <li>
+                    <img src="./Assets/Screenshot_from_2021-07-23_12-28-21-removebg-preview.png" title="Street Food" height="80" />
+                </li>
+                <li>
+                    <a href="#">Catering</a>
+                </li>
+                <li>
+                    <a href="#">Reservation</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     
 </body>
 </html>
