--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#">Happy Hour</a>
                 </li>
                 <li>
-                    <img src="./Assets/Screenshot_from_2021-07-23_12-28-21-removebg-preview.png" title="Street Food" height="80" />
+                    <img id="logo" src="./Assets/Screenshot_from_2021-07-23_12-28-21-removebg-preview.png" title="Street Food" height="80" />
                 </li>
                 <li>
                     <a href="#">Catering</a>
@@ -40,7 +40,11 @@
                 </li>
             </ul>
         </nav>
-    </div>
-    
+        <div>
+            <h1>Street Food</h1>
+            <h3>We don't play with food</h3>
+            <p>When I was a small boy, my father told me never to recommend a church or a woman to anyone. And i have found it wise never to recommend a restaurant either. Something always goes wrong with the cheese soufflé</p>
+        </div>
+    </div>   
 </body>
 </html>
