--- a/index.html
+++ b/index.html
@@ -45,6 +45,85 @@
             <h3>We don't play with food</h3>
             <p>When I was a small boy, my father told me never to recommend a church or a woman to anyone. And i have found it wise never to recommend a restaurant either. Something always goes wrong with the cheese soufflé</p>
         </div>
-    </div>   
+    </div>
+    <div>
+        <img src="./Assets/eating_together.png" alt="Eating together">
+        <div>
+            <h1>Eat together</h1>
+            <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+        </div>
+    </div> 
+    <div>
+        <div>
+            <h2>Explore Menu</h2>
+            <div>
+                <h3>Burger Name</h3>
+                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                <p>There is something profoundly satisfying about sharing a meal.</p>
+            </div>
+            <div>
+                <h3>Burger Name</h3>
+                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                <p>There is something profoundly satisfying about sharing a meal.</p>
+            </div>
+            <div>
+                <h3>Burger Name</h3>
+                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                <p>There is something profoundly satisfying about sharing a meal.</p>
+            </div>
+            <div>
+                <h3>Burger Name</h3>
+                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                <p>There is something profoundly satisfying about sharing a meal.</p>
+            </div>
+            <div>
+                <h3>Burger Name</h3>
+                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                <p>There is something profoundly satisfying about sharing a meal.</p>
+            </div>
+            <div>
+                <h3>Burger Name</h3>
+                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                <p>There is something profoundly satisfying about sharing a meal.</p>
+            </div>
+        </div>
+        <div>
+            <h2>Hot Deals</h2>
+            <img src="./Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" alt="Juice glass">
+            <h2>SPECIAL COMBO PACK</h2>
+            <h3>Burger Pizz</h3>
+            <h3>Fries & Drinks</h3>
+            <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>   
+        </div>
+        <div>
+            <h2>Contact Us</h2>
+            <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+            <div class="col-75">
+                <input type="text" id="lname" name="email" placeholder="Email">
+              </div>
+            <div class="row">
+                <input type="Send" value="Send">
+            </div>
+        </div>
+        <footer>
+            <div>
+                <p>Sunday - Thursday</p>
+                <p>4-PPM</p>
+                <p>Friday - Saturday</p>
+                <p>4 - 10PM</p>
+                <p><strong>(423)266-1121</strong></p>
+                <p>801 Chestnut Street|</p>
+                <p>Chattanooga TN 37402</p>
+                <p><strong>FOLLOW</strong></p>
+                <p>GET THE LATEST NEWS.SIGN UP</p>
+                <P>FOR OUR NEWSLETERS</P>
+                <a href="#">@Website Desing</a>
+                <img src="./Assets/1a2a80112ef4d3e431289f09d568f512-removebg-preview.png" alt="instagram icon">
+                <div id="send">
+                    <input type="Send" value="Send">
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
