--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <h1>Street Food</h1>
             <h3>We don't play with food</h3>
             <p>When I was a small boy, my father told me never to recommend a church or a woman to anyone. And i have found it wise never to recommend a restaurant either. Something always goes wrong with the cheese soufflé</p>
+            <div class="order">
+                <button class="now">Order Now</button>
+            </div>
         </div>
     </div>
     <div>
@@ -56,35 +59,37 @@
     <div>
         <div>
             <h2>Explore Menu</h2>
-            <div>
-                <h3>Burger Name</h3>
-                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                <p>There is something profoundly satisfying about sharing a meal.</p>
-            </div>
-            <div>
-                <h3>Burger Name</h3>
-                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                <p>There is something profoundly satisfying about sharing a meal.</p>
-            </div>
-            <div>
-                <h3>Burger Name</h3>
-                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                <p>There is something profoundly satisfying about sharing a meal.</p>
-            </div>
-            <div>
-                <h3>Burger Name</h3>
-                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                <p>There is something profoundly satisfying about sharing a meal.</p>
-            </div>
-            <div>
-                <h3>Burger Name</h3>
-                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                <p>There is something profoundly satisfying about sharing a meal.</p>
-            </div>
-            <div>
-                <h3>Burger Name</h3>
-                <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                <p>There is something profoundly satisfying about sharing a meal.</p>
+            <div class="grid">
+                <div>
+                    <h3>Burger Name</h3>
+                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                </div>
+                <div>
+                    <h3>Burger Name</h3>
+                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                </div>
+                <div>
+                    <h3>Burger Name</h3>
+                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                </div>
+                <div>
+                    <h3>Burger Name</h3>
+                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                </div>
+                <div>
+                    <h3>Burger Name</h3>
+                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                </div>
+                <div>
+                    <h3>Burger Name</h3>
+                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
+                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                </div>
             </div>
         </div>
         <div>
@@ -101,8 +106,8 @@
             <div class="col-75">
                 <input type="text" id="lname" name="email" placeholder="Email">
               </div>
-            <div class="row">
-                <input type="Send" value="Send">
+            <div class="send">
+                <button class="button1">Send</button>
             </div>
         </div>
         <footer>
@@ -120,7 +125,7 @@
                 <a href="#">@Website Desing</a>
                 <img src="./Assets/1a2a80112ef4d3e431289f09d568f512-removebg-preview.png" alt="instagram icon">
                 <div id="send">
-                    <input type="Send" value="Send">
+                    <button class="button2">Send</button>
                 </div>
             </div>
         </footer>
