nessesary edits to html to accomodate the css styling

--- a/index.html
+++ b/index.html
@@ -56,39 +56,39 @@
             <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
         </div>
     </div> 
-    <div>
-        <div>
+    <div class="inview">
+        <div class="menu">
             <h2>Explore Menu</h2>
             <div class="grid">
-                <div>
-                    <h3>Burger Name</h3>
-                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                <div class="card">
+                    <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
+                    <h3 class="cardTitle">Burger Name</h3>
+                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
                 </div>
-                <div>
-                    <h3>Burger Name</h3>
-                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                <div class="card">
+                    <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
+                    <h3 class="cardTitle">Burger Name</h3>
+                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
                 </div>
-                <div>
-                    <h3>Burger Name</h3>
-                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                <div class="card">
+                    <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
+                    <h3 class="cardTitle">Burger Name</h3>
+                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
                 </div>
-                <div>
-                    <h3>Burger Name</h3>
-                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                <div class="card">
+                    <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
+                    <h3 class="cardTitle">Burger Name</h3>
+                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
                 </div>
-                <div>
-                    <h3>Burger Name</h3>
-                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                <div class="card">
+                    <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
+                    <h3 class="cardTitle">Burger Name</h3>
+                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
                 </div>
-                <div>
-                    <h3>Burger Name</h3>
-                    <img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger">
-                    <p>There is something profoundly satisfying about sharing a meal.</p>
+                <div class="card">
+                    <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
+                    <h3 class="cardTitle">Burger Name</h3>
+                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
                 </div>
             </div>
         </div>
