--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </li>
             </ul>
         </nav>
-        <div>
+        <div class="streetFood">
             <h1>Street Food</h1>
             <h3>We don't play with food</h3>
             <p>When I was a small boy, my father told me never to recommend a church or a woman to anyone. And i have found it wise never to recommend a restaurant either. Something always goes wrong with the cheese soufflé</p>
@@ -49,9 +49,9 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="container">
         <img src="./Assets/eating_together.png" alt="Eating together">
-        <div>
+        <div class="etogether">
             <h1>Eat together</h1>
             <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
         </div>
@@ -92,17 +92,24 @@
                 </div>
             </div>
         </div>
-        <div>
-            <h2>Hot Deals</h2>
-            <img src="./Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" alt="Juice glass">
-            <h2>SPECIAL COMBO PACK</h2>
-            <h3>Burger Pizz</h3>
-            <h3>Fries & Drinks</h3>
-            <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>   
+        <div class="deals">
+            <h2 class="dealsTitle">Hot Deals</h2>
+            <div class="dealsCombo">
+                <img class="juice" src="./Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" alt="Juice glass">
+                <img class="juiceburger" src="./Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" alt="Burger">
+                <div class="comboPack">
+                    <h2>SPECIAL COMBO PACK</h2>
+                    <h3>Burger Pizz</h3>
+                    <h3>Fries & Drinks</h3>
+                    <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+                </div> 
+            </div>  
         </div>
         <div>
             <h2>Contact Us</h2>
-            <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+            <div>
+                <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+            </div>
             <div class="col-75">
                 <input type="text" id="lname" name="email" placeholder="Email">
               </div>
@@ -110,6 +117,7 @@
                 <button class="button1">Send</button>
             </div>
         </div>
+        <div class="space"></div>
         <footer>
             <div>
                 <p>Sunday - Thursday</p>
