footer elements organised into divs ready for css styling

--- a/index.html
+++ b/index.html
@@ -124,17 +124,21 @@
                 <p>4-PPM</p>
                 <p>Friday - Saturday</p>
                 <p>4 - 10PM</p>
+            </div>
+            <div>
                 <p><strong>(423)266-1121</strong></p>
                 <p>801 Chestnut Street|</p>
                 <p>Chattanooga TN 37402</p>
+            </div>
+            <div>
                 <p><strong>FOLLOW</strong></p>
                 <p>GET THE LATEST NEWS.SIGN UP</p>
                 <P>FOR OUR NEWSLETERS</P>
                 <a href="#">@Website Desing</a>
-                <img src="./Assets/1a2a80112ef4d3e431289f09d568f512-removebg-preview.png" alt="instagram icon">
-                <div id="send">
-                    <button class="button2">Send</button>
-                </div>
+            </div>
+            <div>
+                <img src="./Assets/1a2a80112ef4d3e431289f09d568f512-removebg-preview.png" alt="instagram icon" height="20">
+                <button class="button2">Send</button>
             </div>
         </footer>
     </div>
