html update for better styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <!--<link rel="stylesheet" href="./css/circle_design.css">-->
     <title>🌯Street Food🌯</title>
 </head>
 <body>
@@ -43,17 +44,28 @@
         <div class="streetFood">
             <h1>Street Food</h1>
             <h3>We don't play with food</h3>
-            <p>When I was a small boy, my father told me never to recommend a church or a woman to anyone. And i have found it wise never to recommend a restaurant either. Something always goes wrong with the cheese soufflé</p>
+            <p>When I was a small boy, my father told me 
+                <br>never to recommend a church or a woman 
+                <br>to anyone. And i have found it wise never to 
+                <br>recommend a restaurant either. Something 
+                <br>always goes wrong with the cheese soufflé
+            </p>
             <div class="order">
                 <button class="now">Order Now</button>
             </div>
         </div>
     </div>
+    <div class="circle"></div>
     <div class="container">
         <img src="./Assets/eating_together.png" alt="Eating together">
         <div class="etogether">
             <h1>Eat together</h1>
-            <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+            <p>There is something profoundly satisfying 
+                <br>about sharing a meal. Eating together, 
+                <br>breaking bread together, is one of the 
+                <br>oldest and most fundamentally unifying of 
+                <br>human experiences.
+            </p>
         </div>
     </div> 
     <div class="inview">
@@ -63,37 +75,61 @@
                 <div class="card">
                     <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
                     <h3 class="cardTitle">Burger Name</h3>
-                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
+                    <p class="cardText">There is something 
+                        <br>profoundly 
+                        <br>satisfying 
+                        <br>about sharing a meal.
+                    </p>
                 </div>
                 <div class="card">
                     <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
                     <h3 class="cardTitle">Burger Name</h3>
-                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
+                    <p class="cardText">There is something 
+                        <br>profoundly 
+                        <br>satisfying 
+                        <br>about sharing a meal.
+                    </p>
                 </div>
                 <div class="card">
                     <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
                     <h3 class="cardTitle">Burger Name</h3>
-                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
+                    <p class="cardText">There is something 
+                        <br>profoundly 
+                        <br>satisfying 
+                        <br>about sharing a meal.
+                    </p>
                 </div>
                 <div class="card">
                     <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
                     <h3 class="cardTitle">Burger Name</h3>
-                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
+                    <p class="cardText">There is something 
+                        <br>profoundly 
+                        <br>satisfying 
+                        <br>about sharing a meal.
+                    </p>
                 </div>
                 <div class="card">
                     <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
                     <h3 class="cardTitle">Burger Name</h3>
-                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
+                    <p class="cardText">There is something 
+                        <br>profoundly 
+                        <br>satisfying 
+                        <br>about sharing a meal.
+                    </p>
                 </div>
                 <div class="card">
                     <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
                     <h3 class="cardTitle">Burger Name</h3>
-                    <p class="cardText">There is something profoundly satisfying about sharing a meal.</p>
+                    <p class="cardText">There is something 
+                        <br>profoundly 
+                        <br>satisfying 
+                        <br>about sharing a meal.
+                    </p>
                 </div>
             </div>
         </div>
         <div class="deals">
-            <h2 class="dealsTitle">Hot Deals</h2>
+            <h2>Hot Deals</h2>
             <div class="dealsCombo">
                 <img class="juice" src="./Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" alt="Juice glass">
                 <img class="juiceburger" src="./Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" alt="Burger">
@@ -101,42 +137,52 @@
                     <h2>SPECIAL COMBO PACK</h2>
                     <h3>Burger Pizz</h3>
                     <h3>Fries & Drinks</h3>
-                    <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+                    <p>There is something profoundly satisfying 
+                        <br>about sharing a meal. Eating together, 
+                        <br>breaking bread together, is one of the 
+                        <br>oldest and most fundamentally unifying of 
+                        <br>human experiences.
+                    </p>
                 </div> 
             </div>  
         </div>
-        <div>
+        <div class="contactus">
             <h2>Contact Us</h2>
-            <div>
-                <p>There is something profoundly satisfying about sharing a meal. Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
-            </div>
-            <div class="col-75">
+            <div class="contact">
+                <p>There is something profoundly satisfying 
+                    <br>about sharing a meal. Eating together, 
+                    <br>breaking bread together, is one of the 
+                    <br>oldest and most fundamentally unifying of 
+                    <br>human experiences.
+                </p>    
+            </div> 
+            <div class="email">
                 <input type="text" id="lname" name="email" placeholder="Email">
-              </div>
+            </div>
             <div class="send">
                 <button class="button1">Send</button>
             </div>
         </div>
         <div class="space"></div>
         <footer>
-            <div>
+            <div class="days">
                 <p>Sunday - Thursday</p>
-                <p>4-PPM</p>
+                <span><p>4-PPM</p></span>
                 <p>Friday - Saturday</p>
-                <p>4 - 10PM</p>
+                <span><p>4 - 10PM</p></span>
             </div>
-            <div>
+            <div class="address">
                 <p><strong>(423)266-1121</strong></p>
                 <p>801 Chestnut Street|</p>
                 <p>Chattanooga TN 37402</p>
             </div>
-            <div>
+            <div class="social">
                 <p><strong>FOLLOW</strong></p>
                 <p>GET THE LATEST NEWS.SIGN UP</p>
                 <P>FOR OUR NEWSLETERS</P>
                 <a href="#">@Website Desing</a>
             </div>
-            <div>
+            <div class="icons">
                 <img src="./Assets/1a2a80112ef4d3e431289f09d568f512-removebg-preview.png" alt="instagram icon" height="20">
                 <button class="button2">Send</button>
             </div>
