--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <!--<link rel="stylesheet" href="./css/circle_design.css">-->
+    <link rel="stylesheet" href="./css/circle_design.css">
     <title>🌯Street Food🌯</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
         </nav>
         <div class="streetFood">
             <h1>Street Food</h1>
-            <h3>We don't play with food</h3>
+            <h3 class="wefood">We don't play with food</h3>
             <p>When I was a small boy, my father told me 
                 <br>never to recommend a church or a woman 
                 <br>to anyone. And i have found it wise never to 
@@ -54,8 +54,17 @@
                 <button class="now">Order Now</button>
             </div>
         </div>
+        <img class="chicken" src="./Assets/image 5 (1).png" alt="chicken with rice">
     </div>
-    <div class="circle"></div>
+    <div class="circle">
+        <div class="circledash">
+            <img class="steak" src="./Assets/image 1.png" alt="steak">
+            <img class="tomato" src="./Assets/image 2.png" alt="tomato chicken">
+            <img class="letturs" src="./Assets/image 3.png" alt="chicken letturs">
+            <img class="rice" src="./Assets/image 5.png" alt="chicken with rice">
+            <img class="pilipili" src="./Assets/image 6.png" alt="chapo pilipili">
+        </div>
+    </div>
     <div class="container">
         <img src="./Assets/eating_together.png" alt="Eating together">
         <div class="etogether">
