--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </ul>
         </nav>
         <div class="streetFood">
-            <h1>Street Food</h1>
-            <h3 class="wefood">We don't play with food</h3>
+            <h1><span class="green">Street</span> <span class= "yellow">Food</span></h1>
+            <h4 class="wefood">We don't play with food</h4>
             <p>When I was a small boy, my father told me 
                 <br>never to recommend a church or a woman 
                 <br>to anyone. And i have found it wise never to 
@@ -79,7 +79,7 @@
     </div> 
     <div class="inview">
         <div class="menu">
-            <h2>Explore Menu</h2>
+            <h2><span class="black">Explore</span> Menu</h2>
             <div class="grid">
                 <div class="card">
                     <div class="burger"><img src="./Assets/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="Burger"></div>
@@ -138,12 +138,12 @@
             </div>
         </div>
         <div class="deals">
-            <h2>Hot Deals</h2>
+            <h2><span class="black">Hot</span> Deals</h2>
             <div class="dealsCombo">
                 <img class="juice" src="./Assets/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" alt="Juice glass">
                 <img class="juiceburger" src="./Assets/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" alt="Burger">
                 <div class="comboPack">
-                    <h2>SPECIAL COMBO PACK</h2>
+                    <h2 class="scp">SPECIAL COMBO PACK</h2>
                     <h3>Burger Pizz</h3>
                     <h3>Fries & Drinks</h3>
                     <p>There is something profoundly satisfying 
@@ -156,7 +156,7 @@
             </div>  
         </div>
         <div class="contactus">
-            <h2>Contact Us</h2>
+            <h2><span class="black">Contact</span> Us</h2>
             <div class="contact">
                 <p>There is something profoundly satisfying 
                     <br>about sharing a meal. Eating together, 
@@ -175,9 +175,9 @@
         <div class="space"></div>
         <footer>
             <div class="days">
-                <p>Sunday - Thursday</p>
+                <p><b>Sunday - Thursday</b></p>
                 <span><p>4-PPM</p></span>
-                <p>Friday - Saturday</p>
+                <p><b>Friday - Saturday</b></p>
                 <span><p>4 - 10PM</p></span>
             </div>
             <div class="address">
@@ -192,8 +192,12 @@
                 <a href="#">@Website Desing</a>
             </div>
             <div class="icons">
-                <img src="./Assets/1a2a80112ef4d3e431289f09d568f512-removebg-preview.png" alt="instagram icon" height="20">
-                <button class="button2">Send</button>
+                <div>
+                    <img src="./Assets/1a2a80112ef4d3e431289f09d568f512-removebg-preview.png" alt="instagram icon" height="20">
+                </div>
+                <div>
+                    <button class="button2">Send</button>
+                </div>
             </div>
         </footer>
     </div>
